WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147930
X.[[SetPrototypeOf]](Y) should succeed if X.[[Prototype]] is already Y even if X is not extensible
https://bugs.webkit.org/show_bug.cgi?id=147930
Summary
X.[[SetPrototypeOf]](Y) should succeed if X.[[Prototype]] is already Y even i...
ziyunfei
Reported
2015-08-12 01:12:12 PDT
js> var proto = {} js> var obj = Object.preventExtensions(Object.create(proto)) js> Object.setPrototypeOf(obj ,proto) TypeError: Attempted to assign to readonly property. // should return obj js> Reflect.setPrototypeOf(obj, proto) false // should be true
Attachments
Patch
(4.81 KB, patch)
2015-08-13 00:58 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2015-08-12 01:32:35 PDT
(In reply to
comment #0
)
> js> var proto = {} > js> var obj = Object.preventExtensions(Object.create(proto)) > js> Object.setPrototypeOf(obj ,proto) > TypeError: Attempted to assign to readonly property. // should return obj > js> Reflect.setPrototypeOf(obj, proto) > false // should be true
Nice catch! We need to fix 1. Object.setPrototypeOf 2. Reflect.setPrototypeOf 3. object.__proto__ = ...
Yusuke Suzuki
Comment 2
2015-08-13 00:58:08 PDT
Created
attachment 258886
[details]
Patch
Saam Barati
Comment 3
2015-08-13 07:59:36 PDT
Comment on
attachment 258886
[details]
Patch r=me
Yusuke Suzuki
Comment 4
2015-08-13 09:34:54 PDT
Comment on
attachment 258886
[details]
Patch Thank you!
WebKit Commit Bot
Comment 5
2015-08-13 10:25:24 PDT
Comment on
attachment 258886
[details]
Patch Clearing flags on attachment: 258886 Committed
r188384
: <
http://trac.webkit.org/changeset/188384
>
WebKit Commit Bot
Comment 6
2015-08-13 10:25:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug